# revm

./: .gitattributes  .gitignore  .gitmodules  .rustfmt.toml  AGENTS.md  CHANGELOG.md  CHECKPOINT_REFACTOR_SUMMARY.md  CLAUDE.md  CLOUDFLARE_QUICKSTART.md  CLOUDFLARE_SETUP.md  CONTRIBUTING.md  Cargo-bak.toml  Cargo.bck.toml  Cargo.toml  Cross.toml  GNARK_INTEGRATION_PLAN.md  LICENSE  MIGRATION_GUIDE.md  README.md  Typos.toml  addressOpcodes.json  asm_both.sh  bal_create_in_static_context.json  blockchain_create_tx_state_gas.json  book.toml  clippy.toml  create2checkFieldsInInitcode.json  create2check_fields_in_initcode.json  create2noCash.json  createLargeResult.json  deny.toml  funding.json  index.html  package.json  perf.data  publish.sh  release-plz.toml  rust-toolchain  rust-toolchain.toml  sstoreGas.json  (+10 more)
bins/revm-merkle/: Cargo.toml  storage copy.json
bins/revm-merkle/src/: model.rs
bins/revm-test/: CHANGELOG.md  Cargo.toml
bins/revm-test/src/: main.rs
bins/revme/: CHANGELOG.md  Cargo.toml  Makefile  README.md  web3.txt
bins/revme/benches/: evm.rs
bins/revme/blst_tests/: report_fill.html
bins/revme/src/: build.rs  cli_env.rs  cmd.rs  dir_utils.rs  exec.rs  lib.rs  main.rs  tracer_eip3155.rs
crates/bytecode/: CHANGELOG.md  Cargo.toml  LICENSE
crates/bytecode/src/: bytecode.rs  decode_errors.rs  eip7702.rs  eof.rs  errors.rs  fusion.rs  iter.rs  iterator.rs  legacy.rs  lib.rs  opcode.rs  ownable_account.rs  rwasm.rs  tests.rs  utils.rs
crates/compiler/: Cargo.toml  Makefile
crates/compiler/src/: lib.rs
crates/context/: CHANGELOG.md  Cargo.toml  LICENSE
crates/context/interface/: CHANGELOG.md  Cargo.toml
crates/context/src/: bal.rs  block.rs  cfg.rs  context.rs  context_wire.rs  data.rs  default.rs  evm.rs  frame.rs  getters.rs  instructions.rs  journal.rs  journal_init.rs  journaled_state.rs  lib.rs  local.rs  setters.rs  tx.rs
crates/database/: CHANGELOG.md  Cargo.toml
crates/database/interface/: CHANGELOG.md  Cargo.toml
crates/database/src/: alloydb.rs  ethersdb.rs  in_memory_db.rs  lib.rs  states.rs
crates/ee-tests/: CHANGELOG.md  Cargo.toml  README.md  eip8037.md  tip1016.md
crates/ee-tests/src/: eip2780.rs  eip8037.rs  lib.rs  op_revm_tests.rs  persistent_warming_gas_test.rs  revm_tests.rs  tip1016.rs
crates/gas/: Cargo.toml
crates/gnark-bn254/: Cargo.toml  README.md  build.rs
crates/gnark-bn254/gnark-ffi/: .gitignore  Makefile  go.mod  wrapper.go
crates/gnark-bn254/src/: lib.rs
crates/gwyneth/: Cargo.toml
crates/gwyneth/src/: cfg.rs  context.rs  evm.rs  lib.rs  precompiles.rs  xcall.rs
crates/handler/: CHANGELOG.md  Cargo.toml
crates/handler/interface/: CHANGELOG.md  Cargo.toml
crates/handler/src/: api.rs  async_ctx.rs  eth_handler.rs  evm.rs  execution.rs  frame.rs  frame_data.rs  handler.rs  inspector.rs  instructions.rs  interrupted_outcome.rs  item_or_result.rs  lib.rs  mainnet_builder.rs  mainnet_handler.rs  post_execution.rs  pre_execution.rs  precompile_provider.rs  system_call.rs  tx_validation.rs  validation.rs
crates/inspector/: CHANGELOG.md  Cargo.toml  LICENSE
crates/inspector/src/: count_inspector.rs  customprinter.rs  eip3155.rs  either.rs  exec.rs  gas.rs  handler.rs  handler_register.rs  inspect.rs  inspector.rs  inspector_context.rs  inspector_frame.rs  inspector_instruction.rs  inspector_tests.rs  journal.rs  lib.rs  mainnet_inspect.rs  noop.rs  prev_inspector.rs  test_inspector.rs  traits.rs
crates/interpreter/: CHANGELOG.md  Cargo.toml
crates/interpreter/benches/: instructions.rs
crates/interpreter/src/: aligned_stack.rs  basic_block_gas.rs  batched_interpreter.rs  bits.rs  bytecode_cache.rs  call_inputs.rs  call_outcome.rs  common.rs  create_inputs.rs  create_outcome.rs  eof_create_inputs.rs  eof_create_outcome.rs  function_stack.rs  gas.rs  host.rs  inner_models.rs  instruction_context.rs  instruction_result.rs  instructions.rs  interpreter.rs  interpreter_action.rs  interpreter_pool.rs  interpreter_types.rs  interpreter_wiring.rs  lib.rs  macros.rs  match_dispatch.rs  models.rs  no_fusion_bytecode.rs  opcode.rs  opcode_fusion.rs  specification.rs  table.rs  tail_call.rs
crates/interpreter/tests/: eof.rs  miri_read_slice_oob.rs
crates/monad-revm/: Cargo.toml
crates/monad-revm/src/: cfg.rs  evm.rs  handler.rs  instructions.rs  lib.rs  precompiles.rs  spec.rs
crates/op-revm/: CHANGELOG.md  Cargo.toml
crates/op-revm/src/: api.rs  constants.rs  evm.rs  fast_lz.rs  handler.rs  l1block.rs  lib.rs  precompiles.rs  result.rs  spec.rs  transaction.rs
crates/op-revm/tests/: README.md  common.rs  integration.rs  migration_example.rs  test_utils.rs  testdata_test.rs
crates/optimism/: CHANGELOG.md  Cargo.toml
crates/optimism/src/: api.rs  bls12.rs  bn128.rs  constants.rs  context.rs  env.rs  evm.rs  fast_lz.rs  handler.rs  handler_register.rs  l1block.rs  lib.rs  precompile.rs  precompiles.rs  result.rs  spec.rs  transaction.rs  wiring.rs
crates/precompile/: CHANGELOG.md  Cargo.toml  README.md  build.rs
crates/precompile/bench/: blake2.rs  bls12_381_zero_check.rs  ecrecover.rs  eip1962.rs  eip2537.rs  eip4844.rs  main.rs  modexp.rs  secp256r1.rs
crates/precompile/benches/: bench.rs  ecrecover.rs  eip1962.rs  eip2537.rs  eip4844.rs
crates/precompile/src/: blake2.rs  blob.rs  bls12_381.rs  bls12_381_const.rs  bls12_381_no_std.rs  bls12_381_utils.rs  bn128.rs  bn254.rs  cait_sith_key_deriver.rs  (+20 more)
crates/precompiles/: Cargo.toml  README.md
crates/primitives/: CHANGELOG.md  Cargo.toml  LICENSE  build.rs
crates/revm/: CHANGELOG.md  Cargo.toml  README.md
crates/revm_fluent/: Cargo.toml
crates/revm_precompiles/: CHANGELOG.md  Cargo.toml  README.md
crates/revm_wasm/: Cargo.toml  index.html
crates/revmjs/: CHANGELOG.md  Cargo.toml  README.md  index.html
crates/rwasm/: CHANGELOG.md  Cargo.toml  Makefile
crates/specification/: CHANGELOG.md  Cargo.toml
crates/state/: CHANGELOG.md  Cargo.toml
e2e/: .gitignore  Cargo.toml  Makefile  gen_tests.js
e2e/src/: evm.rs  lib.rs  main.rs  merkle_trie.rs  runner.rs  short_tests.rs  tests.rs  tests2.rs  util.rs  utils.rs  wasm.rs
(+4737 files in other folders)
