[package]
name = "revm-rwasm-e2e"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
fluentbase-sdk = { path = "../../crates/sdk" }
fluentbase-genesis = { path = "../../crates/genesis", default-features = false, features = ["generate-genesis"] }

revm = { package = "revm", path = "../crates/revm", default-features = false, features = [
    "ethersdb",
    "std",
    "serde-json",
    "c-kzg",
    "blst",
] }

hash-db = "=0.15"
hex = "0.4"
hashbrown = "0.14"
indicatif = "0.17"
plain_hasher = "0.2"
alloy-rlp = { version = "0.3", default-features = false, features = [
    "arrayvec",
    "derive",
] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
structopt = "0.3"
thiserror = "1.0"
triehash = "0.8"
walkdir = "2.5"
k256 = { version = "0.13.3", features = ["ecdsa"] }

[features]
default = [
    #    "debug-print",
    #    "disable-wasmtime"
]
debug-print = [
    "revm/debug-print",
]
disable-wasmtime = [
    "revm/disable-wasmtime",
]

