[package]
name = "revm-rwasm-e2e"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
fluentbase-sdk = { path = "../../crates/sdk" }
fluentbase-genesis = { path = "../../crates/genesis", default-features = false }

revm = { path = "../crates/revm", default-features = false, features = ["std", "serde-json", "serde"] }
rwasm-revm = { path = "../crates/rwasm-revm" }

hash-db = "=0.15"
hex = "0.4"
hashbrown = "0.14"
indicatif = "0.17"
plain_hasher = "0.2"
alloy-rlp = { version = "0.3", default-features = false, features = [
    "arrayvec",
    "derive",
] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
structopt = "0.3"
thiserror = "1.0"
triehash = "0.8"
walkdir = "2.5"
k256 = { version = "0.13.3", features = ["ecdsa"] }

[features]
std = [
    "fluentbase-genesis/std",
    "fluentbase-sdk/std",
]

default = [
    "std",
    #    "debug-print",
    "wasmtime",
]
debug-print = [
    "revm/debug-print",
    "rwasm-revm/debug-print",
]
wasmtime = [
    "rwasm-revm/wasmtime",
]

