[package]
name = "revm-test"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.6"
hex = "0.4"
revm = { path = "../../crates/revm", version = "11.0.0", default-features=false }
microbench = "0.5"
alloy-sol-macro = "0.7.0"
alloy-sol-types = "0.7.0"
regex = "1.10.5"
eyre = "0.6.12"


[[bin]]
name = "analysis"

[[bin]]
name = "snailtracer"

[[bin]]
name = "transfer"

[[bin]]
name = "burntpix"
