[package]
name = "revm-test"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.7"
hex = "0.4"
revm = { path = "../../crates/revm", version = "14.0.1", default-features=false }
microbench = "0.5"
alloy-sol-macro = "0.8.0"
alloy-sol-types = "0.8.2"
regex = "1.10.6"
eyre = "0.6.12"


[[bin]]
name = "analysis"

[[bin]]
name = "snailtracer"

[[bin]]
name = "transfer"

[[bin]]
name = "burntpix"
