[package]
name = "revme"
description = "Rust Ethereum Virtual Machine Executable"
version = "4.1.0"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# revm
revm = { workspace = true, features = [
    "std",
    "hashbrown",
    "c-kzg",
    "blst",
    "serde-json",
    "hashbrown",
] }
primitives.workspace = true
database.workspace = true
database-interface.workspace = true
state.workspace = true
bytecode = { workspace = true, features = ["std", "parse"] }
context.workspace = true
context-interface.workspace = true
inspector = { workspace = true, features = ["std", "serde-json"] }
statetest-types.workspace = true
criterion.workspace = true

# alloy
alloy-rlp = { workspace = true, features = ["arrayvec", "derive"] }
alloy-sol-types.workspace = true

# misc
hash-db.workspace = true
indicatif.workspace = true
plain_hasher.workspace = true
serde = { workspace = true, features = ["derive", "rc"] }
serde_json = { workspace = true, features = ["preserve_order"] }
clap.workspace = true
thiserror.workspace = true
triehash.workspace = true
walkdir.workspace = true
k256 = { workspace = true, features = ["ecdsa"] }

[[bench]]
name = "evm"
harness = false
