[package]
name = "revm-bytecode"
description = "EVM Bytecodes"
version = "7.0.2"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dependencies]
# revm
primitives.workspace = true

# Jumpmap
bitvec = { workspace = true, features = ["alloc"] }

# Optional
serde = { workspace = true, features = ["derive", "rc"], optional = true }

# parse opcode feature
paste = { workspace = true, optional = true }
phf = { workspace = true, features = ["macros"], optional = true }

[dev-dependencies]
serde_json = { workspace = true }

[features]
default = ["std", "parse"]
std = [
    "serde?/std",
    "serde_json/std",
    "primitives/std",
    "bitvec/std",
    "phf?/std",
]
hashbrown = ["primitives/hashbrown"]
serde = ["dep:serde", "primitives/serde", "bitvec/serde", "phf?/serde"]
parse = ["phf", "paste"]

# Deprecated, please use `serde` feature instead.
serde-json = ["serde"]
