[package]
authors = ["Dmitry Savonin <dmitry@fluentlabs.xyz>"]
description = "revm - Rust Ethereum Virtual Machine"
edition = "2021"
keywords = ["no_std", "ethereum", "evm", "revm"]
license = "MIT"
name = "revm-compiler"
repository = "https://github.com/bluealloy/revm"
version = "3.5.0"
readme = "../../README.md"

[dependencies]
revm-interpreter = { path = "../interpreter", version = "1.3.0", default-features = false, features = ["serde"] }
revm-precompile = { path = "../precompile", version = "2.2.0", default-features = false, features = ["serde"] }

# rwasm
fluentbase-sdk = { git = "https://github.com/fluentlabs-xyz/fluentbase.git", branch = "devel" }
#fluentbase-sdk = { path = "../../../fluentbase/sdk", default-features = false, features = ["evm"] }
serde_json = { version = "1.0.108", default-features = false, features = ["alloc"] }

[features]
default = []

[lib]
crate-type = ["cdylib"]

[profile.release]
panic = "abort"
lto = true
opt-level = 'z'
strip = true