[package]
name = "revm-context"
description = "Revm context crates"
version = "8.0.4"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dependencies]
# revm
context-interface.workspace = true
primitives.workspace = true
database-interface.workspace = true
state.workspace = true
bytecode.workspace = true

# misc
derive-where.workspace = true
cfg-if.workspace = true

# Optional
serde = { workspace = true, features = ["derive", "rc"], optional = true }

[dev-dependencies]
database.workspace = true

[features]
default = ["std"]
std = [
	"serde?/std",
	"bytecode/std",
	"context-interface/std",
	"database/std",
	"database-interface/std",
	"primitives/std",
	"state/std",
]
serde = [
	"dep:serde",
	"primitives/serde",
	"state/serde",
	"context-interface/serde",
	"bytecode/serde",
	"database/serde",
	"database-interface/serde",
	"derive-where/serde",
]
dev = [
	"memory_limit",
	"optional_balance_check",
	"optional_block_gas_limit",
	"optional_eip3541",
	"optional_eip3607",
	"optional_no_base_fee",
	"optional_priority_fee_check",
]
memory_limit = []
optional_balance_check = []
optional_block_gas_limit = []
optional_eip3541 = []
optional_eip3607 = []
optional_no_base_fee = []
optional_priority_fee_check = []
