[package]
name = "revm-context"
description = "Revm context crates"
version = "10.1.2"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dependencies]
# revm
context-interface.workspace = true
primitives.workspace = true
database-interface.workspace = true
state.workspace = true
bytecode.workspace = true

# misc
derive-where.workspace = true
cfg-if.workspace = true
bitvec.workspace = true

# Optional
serde = { workspace = true, features = ["derive", "rc"], optional = true }

[dev-dependencies]
database.workspace = true

[features]
default = ["std"]
std = [
	"serde?/std",
	"bytecode/std",
	"context-interface/std",
	"database/std",
	"database-interface/std",
	"primitives/std",
	"state/std",
	"bitvec/std",
]
serde = [
	"dep:serde",
	"primitives/serde",
	"state/serde",
	"context-interface/serde",
	"bytecode/serde",
	"database/serde",
	"database-interface/serde",
	"derive-where/serde",
	"bitvec/serde",
]
dev = [
	"memory_limit",
	"optional_balance_check",
	"optional_block_gas_limit",
	"optional_eip3541",
	"optional_eip3607",
	"optional_eip7623",
	"optional_no_base_fee",
	"optional_priority_fee_check",
	"optional_fee_charge",
]
memory_limit = []
optional_balance_check = []
optional_block_gas_limit = []
optional_eip3541 = []
optional_eip3607 = []
optional_eip7623 = []
optional_no_base_fee = []
optional_priority_fee_check = []
optional_fee_charge = []
