[package]
name = "revm-database"
description = "Revm Database implementations"
version = "9.0.2"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dependencies]
state.workspace = true
primitives.workspace = true
database-interface.workspace = true
bytecode.workspace = true

# Optional
serde = { workspace = true, features = ["derive", "rc"], optional = true }

# alloydb
tokio = { workspace = true, features = [
	"rt-multi-thread",
	"macros",
], optional = true }
alloy-provider = { workspace = true, optional = true }
alloy-eips = { workspace = true, optional = true }
alloy-transport = { workspace = true, optional = true }

[dev-dependencies]
serde_json = { workspace = true, features = ["alloc"] }

[features]
default = ["std"]
std = [
	"serde?/std",
	"alloy-eips?/std",
	"bytecode/std",
	"database-interface/std",
	"primitives/std",
	"state/std",
	"serde_json/std",
]
serde = [
	"dep:serde",
	"alloy-eips?/serde",
	"bytecode/serde",
	"database-interface/serde",
	"primitives/serde",
	"state/serde",
]
alloydb = [
	"std",
	"database-interface/asyncdb",
	"dep:tokio",
	"dep:alloy-provider",
	"dep:alloy-eips",
	"dep:alloy-transport",
]
